--- a/.gitignore
+++ b/.gitignore
@@ -97,14 +97,16 @@ celerybeat-schedule.*
 # SageMath parsed files 
 *.sage.py 
 
-# Environments 
-.env 
-.venv 
-env/ 
-venv/ 
-ENV/ 
-env.bak/ 
-venv.bak/ 
+# Environments
+
+.env
+.venv
+venv/
+env/
+.env/
+.venv/
+
+
 
 # mkdocs documentation 
 /site 
